lessons/kubernetes/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx:latest
