lessons/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test
spec:
  selector:
    app: test
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
