lessons/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test
    http:
      paths:
      - path: /
        backend:
          serviceName: test-service
          servicePort: 8080
